      - Modify Regex search code to use UTF-16 instead of UTF-8 for all
        searches. This brings search in line with the view components
        being able to display UTF-16 characters.
    - Implement issue 1378: Update Hunspell to 1.3.2.
    - Implement issue 1379: Update Boost to Boost 1.49.0.
    - Implement issue 1283: Spell check should have an ignore option.
    - Fix issue 1424: Spell check does not allow paste next to misspelled word.
    - Fix issue 1422: Delete file should not update tab if opened file is not deleted.
    - Fix issue 1417: OPF meta tags not updated if Cover image renamed or deleted.
    - Fix issue 1408: Book Browser should not translate folder names.
    - Fix issue 1308: Allow renaming file extensions.
    - Fix issue 1363: Open and Save file directory inconsistent.
    - Fix issue 1130: Content.opf edits overwritten by save.
    - Fix issue 1354: Chapter Split breaks links in second half of document.
    - Fix issue 999: Split does not update file references in TOC.
    - Fix issue 1277: Meta-editor will not open
    - Fix issue 1281: Semantics information retained for deleted files.
    - Fix issue 1338: F&R Replace All can crash using current file with large replaces.
    - Fix issue 1296: F&R Search All crashes if HTML file doesn't have focus.
    - Fix issue 1382: Settings not saving to disk.
    - Fix issue 1272: Tabs should always use the View state set by the View buttons.

Sigil 0.5.3 2012.02.25
    - Fix issue 1254: Bulk rename will stop if one name matches, context menu
      needs cleanup and warnings.
    - Fix issue 1268: Find/Replace all files does not search in book order,
      and other issues.
    - Fix issue 1266: Store user dictionary as UTF-8.
    - Ensure the checkmarks in add semantic are set correctly when selecting
      multiple files.
    - Fix issue 1030: Don't close if canceling out of a failed save.
    - Fix issue 1258: Find/Replace step by step in All HTML files is broken.

Sigil 0.5.2 2012.02.09