@@ -50,6 +50,7 @@ Sigil 0.6.0 TBA
     - Implement issue 1378: Update Hunspell to 1.3.2.
     - Implement issue 1379: Update Boost to Boost 1.49.0.
     - Implement issue 1283: Spell check should have an ignore option.
+    - Fix issue 1479: F&R auto-completer preventing searching for same word different case.
     - Fix issue 1424: Spell check does not allow paste next to misspelled word.
     - Fix issue 1422: Delete file should not update tab if opened file is not deleted.
     - Fix issue 1417: OPF meta tags not updated if Cover image renamed or deleted.
